tests/invalid/wrong_arity_function.err_exp
wrong_arity_function.m:034: In clause for predicate `main'/2:
wrong_arity_function.m:034:   error: [38;5;203mwrong number of arguments[39;49m ([38;5;203m5[39;49m; should be [38;5;40m1[39;49m
wrong_arity_function.m:034:   or [38;5;40m2[39;49m) in use of constructor [38;5;87m`f'.[39;49m
wrong_arity_function.m:034:   If you are trying to construct a closure
wrong_arity_function.m:034:   containing [38;5;87m`f',[39;49m you cannot do so with [38;5;203m5[39;49m
wrong_arity_function.m:034:   arguments: the predicates with this name have
wrong_arity_function.m:034:   arities [38;5;40m3[39;49m and [38;5;40m4[39;49m, and the only function with this
wrong_arity_function.m:034:   name has arity [38;5;40m2[39;49m.
